--- a/exercicios/ex001/index.html
+++ b/exercicios/ex001/index.html
@@ -10,6 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Meu primeiro documento HTML!</p>
-    <p>Este um momento único!</p>
+    <p>Este um momento único! Escotiel</p>
 </body>
 </html>
